--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>Teste Pagina git hub</p>
-<a href="vendas.html"> Vendas </a>
+<a href="vendas.html"> Vendas Teste </a>
 </body>
 
 </html>
